--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "chrome-assets",
+            "outputPath": "extension",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -26,13 +26,15 @@
             "styles": [
               "src/styles.scss"
             ],
-            "assets": [
-              "src/favicon.ico",
-              "src/assets",
-              {
+            "assets": [{
                 "glob": "**/*",
                 "input": "src/app/assets",
                 "output": "/assets"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/chrome/_locales",
+                "output": "/_locales"
               }
             ],
             "scripts": []
