--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve -o",
     "build": "ng build && copyfiles -f src/chrome/background.js src/chrome/content-script.js src/chrome/manifest.json extension"
   },
   "private": true,
