--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,6 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
-            "inlineStyleLanguage": "scss",
             "assets": [{
                 "glob": "**/*",
                 "input": "src/app/assets",
@@ -34,7 +33,9 @@
                 "output": "/_locales"
               }
             ],
-            "scripts": []
+            "styles": [
+              "src/app/styles.scss"
+            ]
           },
           "configurations": {
             "production": {
@@ -45,14 +46,19 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
+                  "maximumWarning": "3kb",
                   "maximumError": "4kb"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "optimization": {
+                "styles": {
+                  "minify": true,
+                  "inlineCritical": false
+                }
+              }
             },
             "development": {
-
               "buildOptimizer": false,
               "optimization": false,
               "vendorChunk": true,
