--- a/.gitignore
+++ b/.gitignore
@@ -1,47 +1,9 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-
-# Compiled output
-package-lock.json
+.angular
 .vscode
-/extension
-/dist
-/tmp
-/out-tsc
-/bazel-out
 .angulardoc.json
 .browserslistrc
 .editorconfig
-# Node
-/node_modules
-npm-debug.log
-yarn-error.log
+node_modules
+package-lock.json
+extension
 
-# IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
-
-# Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
-
-# Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
-
-# System files
-.DS_Store
-Thumbs.db
